--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": ">=18"
+    "node": "18"
   },
   "main": "dist/random-generator/src/main.js",
   "dependencies": {
@@ -43,12 +43,12 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@nx/jest": "16.7.4",
-    "@nx/nest": "16.7.4",
+    "@nx/jest": "18.0.7",
+    "@nx/nest": "18.0.7",
     "@types/express": "^4.17.13",
     "@types/guid": "^1.0.0",
     "@types/jest": "^27.0.1",
-    "@types/node": "^16.0.0",
+    "@types/node": "18.16.9",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -57,8 +57,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "firebase-functions-test": "^3.1.0",
     "jest": "^27.2.5",
-    "nx": "16.7.4",
-    "nx-cloud": "latest",
+    "nx": "18.0.7",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
