--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "main": "dist/random-generator/src/main.js",
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "axios": "^1.5.1",
+    "cheerio": "^1.0.0-rc.12",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.7.0",
     "guid": "^0.0.12",
